--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
+
     <header>
         <a href="#" class="logo">hema</a>
-        <nav class="navigation"></nav>
-        <a href="services">services</a>
-        <a href="projects">projects</a>
-        <a href="contact">contact</a>
+        <nav class="navigation">
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
 
 
@@ -77,6 +79,18 @@
                     <p class="project-category">electromechnical robot</p>
                     <strong class="project-title">
                         <span>A fluid powered robot for dangrous activities</span>
+                        <a href="#" class="more-details">More details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="images/work6.png" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">personal pages</p>
+                    <strong class="project-title">
+                        <span>web dev</span>
                         <a href="#" class="more-details">More details</a>
                     </strong>
                 </div>
